@@ -1,3 +1,11 @@
+2007-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinDialog.c:    Fix bug #1692927 (buffer length problems)
+	* win/tkWinTest.c:      Added 'testfindwindow' and 'testgetwindowinfo' 
+	and extended 'testwinevent' for WM_COMMAND support to enable testing
+	native messagebox dialogs.
+	* tests/winMsgbox.test: New Windows native messagebox tests.
+
 2007-07-25  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXDialog.c (NavServicesGetFile): reset interp result on
